// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer accepte un lancer de fléchette 1`] = `
Object {
  "scores": Array [
    Object {
      "cible": Object {
        "15": Object {
          "ferme": false,
          "touches": 0,
        },
        "16": Object {
          "ferme": false,
          "touches": 0,
        },
        "17": Object {
          "ferme": false,
          "touches": 0,
        },
        "18": Object {
          "ferme": false,
          "touches": 0,
        },
        "19": Object {
          "ferme": false,
          "touches": 0,
        },
        "20": Object {
          "ferme": false,
          "touches": 1,
        },
        "25": Object {
          "ferme": false,
          "touches": 0,
        },
      },
      "joueur": "J1",
      "points": 0,
    },
  ],
}
`;

exports[`reducer crée un score vierge pour un nouvel inscrit 1`] = `
Object {
  "scores": Array [
    Object {
      "cible": Object {
        "15": Object {
          "ferme": false,
          "touches": 0,
        },
        "16": Object {
          "ferme": false,
          "touches": 0,
        },
        "17": Object {
          "ferme": false,
          "touches": 0,
        },
        "18": Object {
          "ferme": false,
          "touches": 0,
        },
        "19": Object {
          "ferme": false,
          "touches": 0,
        },
        "20": Object {
          "ferme": false,
          "touches": 0,
        },
        "25": Object {
          "ferme": false,
          "touches": 0,
        },
      },
      "joueur": "J1",
      "points": 0,
    },
  ],
}
`;

exports[`reducer retourne le state initial 1`] = `
Object {
  "scores": Array [],
}
`;
